force-app/main/default/objects/BREG_Setting__c/BREG_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global settings for BREG Portal</description>
    <label>BREG Setting</label>
</CustomObject>