force-app/main/default/objects/BREG_Setting__c/fields/Annual_Robot_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Annual_Robot_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Robot Enabled</label>
    <type>Checkbox</type>
</CustomField>