force-app/main/default/objects/BREG_Setting__c/fields/Archive_Fee__c.field-meta.xml
<CustomField>
    <fullName>Archive_Fee__c</fullName>
    <description>Aalta BREG-82</description>
    <label>Archive Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>