force-app/main/default/objects/BREG_Setting__c/fields/Authentication_Code_Length__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Code_Length__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Aalta BREG-134</description>
    <label>Authentication Code Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>