force-app/main/default/objects/BREG_Setting__c/fields/breg_File_Number_Minimum_Length__c.field-meta.xml
<CustomField>
    <fullName>breg_File_Number_Minimum_Length__c</fullName>
    <description>Aalta BREG-3007</description>
    <label>File Number Minimum Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>