force-app/main/default/objects/BREG_Setting__c/fields/COGS_Authentication_Code_Hash_Salt__c.field-meta.xml
<CustomField>
    <fullName>COGS_Authentication_Code_Hash_Salt__c</fullName>
    <description>Aalta BREG-134</description>
    <label>COGS Authentication Code Hash Salt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>