force-app/main/default/objects/BREG_Setting__c/fields/Days_In_Bounced_Check__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Bounced_Check__c</fullName>
    <description>Aalta BREG-2281</description>
    <label>Days In Bounced Check</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>