force-app/main/default/objects/BREG_Setting__c/fields/Entity_List_Builder_Price_Per_Record__c.field-meta.xml
<CustomField>
    <fullName>Entity_List_Builder_Price_Per_Record__c</fullName>
    <defaultValue>0.05</defaultValue>
    <label>Entity List Builder Price Per Record</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>