force-app/main/default/objects/BREG_Setting__c/fields/Exclude_Entity_Types_From_Search_And_Buy__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Entity_Types_From_Search_And_Buy__c</fullName>
    <defaultValue>(&quot;ZZ,R7,CA&quot;)</defaultValue>
    <label>Exclude Entity Types From Search And Buy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>