force-app/main/default/objects/BREG_Setting__c/fields/Expedited_Processing_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Expedited_Processing_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expedited Processing Disabled</label>
    <type>Checkbox</type>
</CustomField>