force-app/main/default/objects/BREG_Setting__c/fields/Global_Data_Migration_Triggers_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Global_Data_Migration_Triggers_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Data Migration Triggers Disabled</label>
    <type>Checkbox</type>
</CustomField>