force-app/main/default/objects/BREG_Setting__c/fields/Home_Warning_Banner_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Home_Warning_Banner_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Notice of Extension warning banner is displayed on the BREG portal home page.</description>
    <inlineHelpText>Show the Notice of Extension warning banner on the portal home page.</inlineHelpText>
    <label>Home Warning Banner Enabled</label>
    <type>Checkbox</type>
</CustomField>