force-app/main/default/objects/BREG_Setting__c/fields/Last_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Number__c</fullName>
    <label>Last Case Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>