force-app/main/default/objects/BREG_Setting__c/fields/Last_Case_Number_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Number_Date__c</fullName>
    <label>Last Case Number Date</label>
    <type>Date</type>
</CustomField>