force-app/main/default/objects/BREG_Setting__c/fields/Link_to_Portal__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Portal__c</fullName>
    <description>Aalta BREG-134</description>
    <label>Link to Portal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>