force-app/main/default/objects/BREG_Setting__c/fields/Normal_Processing_Price__c.field-meta.xml
<CustomField>
    <fullName>Normal_Processing_Price__c</fullName>
    <label>Normal Processing Price</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>