force-app/main/default/objects/BREG_Setting__c/fields/Online_report_discount__c.field-meta.xml
<CustomField>
    <fullName>Online_report_discount__c</fullName>
    <description>Aalta BREG-82</description>
    <label>Online report discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>