force-app/main/default/objects/BREG_Setting__c/fields/Payment_Authorization_Notice_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Payment_Authorization_Notice_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Payment Authorization and Reminder notice is displayed on the BREG portal cart and payment pages.</description>
    <inlineHelpText>Show the Payment Authorization and Reminder notice on the portal cart and payment pages.</inlineHelpText>
    <label>Payment Authorization Notice Enabled</label>
    <type>Checkbox</type>
</CustomField>