force-app/main/default/objects/BREG_Setting__c/fields/Penalty_Fee__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Fee__c</fullName>
    <description>Aalta BREG-82</description>
    <label>Penalty Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>