force-app/main/default/objects/BREG_Setting__c/fields/Published_Document_Code_Valid_Days__c.field-meta.xml
<CustomField>
    <fullName>Published_Document_Code_Valid_Days__c</fullName>
    <description>Aalta BREG-134</description>
    <label>Published Document Code Valid Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>