force-app/main/default/objects/BREG_Setting__c/fields/RDPMS_Adhoc_Request_Timeout_Minutes__c.field-meta.xml
<CustomField>
    <fullName>RDPMS_Adhoc_Request_Timeout_Minutes__c</fullName>
    <defaultValue>3</defaultValue>
    <description>BREG-Configurable timeout in minutes before archive search is marked unsuccessful when no public document is found.</description>
    <label>RDPMS Adhoc Request Timeout Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>