force-app/main/default/objects/BREG_Setting__c/fields/Resubmission_Due_Date_Days__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Due_Date_Days__c</fullName>
    <defaultValue>45</defaultValue>
    <description>Number of days from today to set the Resubmission Due Date when a Case is moved to Rejected status. Defaults to 45 days if blank.</description>
    <label>Resubmission Due Date Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>