force-app/main/default/objects/BREG_Setting__c/fields/Scanner_Automatically_Assigns_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Scanner_Automatically_Assigns_Case_Owner__c</fullName>
    <description>Queue Dev name or Username should be added</description>
    <inlineHelpText>Queue Dev name or Username should be added</inlineHelpText>
    <label>Scanner Automatically Assigns Case Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>