force-app/main/default/objects/BREG_Setting__c/fields/Send_Emails_Org_Wide_Address__c.field-meta.xml
<CustomField>
    <fullName>Send_Emails_Org_Wide_Address__c</fullName>
    <label>Send Emails Org Wide Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>